# fastapi-url-shortener

./: .gitignore  .pre-commit-config.yaml  .secrets.example  README.md  codecov.yaml  pyproject.toml
.github/workflows/: hello-actions.yaml  python-checks.yaml
url-shortener/: .coveragerc  .env.template  app_lifespan.py  main.py  manage.py  staff.py
url-shortener/api/: main_views.py  redirect_views.py
url-shortener/api/api_v1/: __init__.py
url-shortener/api/api_v1/auth/services/: redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
url-shortener/api/api_v1/short_urls/: crud.py  dependencies.py  redis.py  views.py
url-shortener/api/api_v1/short_urls/views/: __init__.py  details_views.py  list_views.py
url-shortener/commands/: hello.py  tokens.py
url-shortener/core/: config.py  const.py
url-shortener/dependencies/: auth.py  short_urls.py
url-shortener/misc/: flash_message.py
url-shortener/schemas/: short_url.py
url-shortener/services/auth/: __init__.py  redis_tokens_helper.py  redis_users_helper.py  users_helper.py
url-shortener/services/short_urls/: __init__.py  form_response_helper.py
url-shortener/storage/short_url/: __init__.py  crud.py  exceptions.py
url-shortener/templates/: about.html  base.html  home.html
url-shortener/templates/components/: navbar.html
url-shortener/templates/macro/: form_field.html
url-shortener/templates/short_urls/: create.html  list.html  update.html
url-shortener/templates/short_urls/components/: back-to-list.html  delete-modal.html  delete.html  edit.html
url-shortener/templates/short_urls/macro/: form.html
url-shortener/templating/: __init__.py  jinja_template.py
url-shortener/testing/: conftest.py
url-shortener/testing/test_api/: conftest.py  test_main_views.py
url-shortener/testing/test_api/test_api_v1/test_auth/test_services/: test_redis_tokens_helper.py
url-shortener/testing/test_api/test_api_v1/test_short_urls/: test_crud.py  test_dependencies.py
url-shortener/testing/test_api/test_api_v1/test_short_urls/test_views/test_details_views/: test_delete.py  test_transfer.py  test_update.py  test_update_partial.py
url-shortener/testing/test_api/test_api_v1/test_short_urls/test_views/test_list_views/: test_create.py
url-shortener/testing/test_schemas/: test_short_url.py  test_user.py
url-shortener/views/: __init__.py  main_views.py
url-shortener/views/short_urls/: __init__.py  create_views.py  delete_views.py  list_views.py  update_views.py
