[project]
name = "fastapi-url-shortener"
version = "0.1.0"
description = "Url script shortener"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "redis[hiredis]>=6.0.0",
    "typer>=0.15.2",
    "uvicorn<=0.20.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]

