[project]
name = "fastapi-url-shortener"
version = "0.1.0"
description = "Url script shortener"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "redis[hiredis]>=6.0.0",
    "typer>=0.15.2",
    "uvicorn<=0.20.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.12",
]

# mypy settings
[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

# ruff settings
[tool.ruff]
required-version = ">=0.11.12"
# Exclude a variety of commonly ignored directories.
# Allow imports relative to the "src" and "test" directories.
src = ["url-shortener",]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
select = [
    "FAST", # FastAPI (FAST)
    "ANN", # flake8-annotations (ANN)
    "I", # isort (I)
    "F", # Pyflakes (F)
    "S", # flake8-bandit (S)
    "BLE", # flake8-blind-except (BLE)
    "FBT", # flake8-boolean-trap (FBT)
    "B", # flake8-bugbear (B)
    "C4", # flake8-comprehensions (C4)
    "T10", # flake8-debugger (T10)
    "EM", # flake8-errmsg (EM)
    "ICN", # flake8-import-conventions (ICN)
    "LOG", # flake8-logging (LOG)
    "G", # flake8-logging-format (G)
    "INP", # flake8-no-pep420 (INP)
    "PIE", # flake8-pie (PIE)
    "PT", # flake8-pytest-style (PT)
    "Q", # flake8-quotes (Q)
    "RET", # flake8-return (RET)
    "SIM", # flake8-simplify (SIM)
    "TCH", # flake8-type-checking (TCH)
    "ARG", # flake8-unused-arguments (ARG)
    "PTH", # flake8-use-pathlib (PTH)
    "C90", # mccabe (C90)
    "PD", # pandas-vet (PD)
    "N", # pep8-naming (N)
    "PL", # pylint (PL)
    "FURB", # refurb (FURB)
    "TRY", # tryceratops (TRY)

]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
